Fixed height issue on mobile screens.

--- a/src/styles/components/_location-block.scss
+++ b/src/styles/components/_location-block.scss
@@ -22,7 +22,8 @@
     @media only screen and (max-width: 768px) {
         flex-direction: column;
         width: 100%;
-        min-height: 140vh;
+        min-height: 100%;
+        height: 100%;
     }
     &__content {
         @extend %bkImage;
